Atualização da API

--- a/appcalculator/src/main/resources/application.properties
+++ b/appcalculator/src/main/resources/application.properties
@@ -1,1 +1,33 @@
+# Configurações da aplicação
 spring.application.name=appcalculator
+
+# Configurações do banco H2 (para desenvolvimento)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configurações JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configurações de segurança (temporariamente desabilitada para desenvolvimento)
+spring.security.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# Configurações de CORS (para React)
+spring.web.cors.allowed-origins=http://localhost:3000
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
+# Configurações de log
+logging.level.com.tripscalculator.appcalculator=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# Configurações de serialização JSON
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=America/Sao_Paulo
